# tap

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
tap/: __init__.py  bpr.py  network.py  readers.py  shortest_path.py
tests/: test_bpr.py  test_network.py  test_readers.py  test_shortest_path.py  test_tap.py
