[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tap"
version = "0.1.0"
description = "Traffic Simulator"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Antonios Mavrotas", email = "antoniosmavrotas@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/Antonios-M/tap"
Repository = "https://github.com/Antonios-M/tap"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9",
  "ty>=0.0.1a8",
  "bandit[toml]>=1.8",
  "pre-commit>=4.0",
  "python-semantic-release>=9.0",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "UP",       # pyupgrade
  "SIM",      # flake8-simplify
  "TCH",      # flake8-type-checking
  "RUF",      # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# ty — type checking
# ---------------------------------------------------------------------------
[tool.ty]
# ty reads src layout automatically; add overrides here if needed

# ---------------------------------------------------------------------------
# Bandit — security
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = []

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tap --cov-report=term-missing --cov-fail-under=80"

# ---------------------------------------------------------------------------
# python-semantic-release
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "uv build"
commit_message = "chore(release): v{version} [skip ci]"

[tool.semantic_release.commit_parser_options]
# conventional commits: feat -> minor, fix -> patch, BREAKING -> major
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "ci", "test", "style"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
