[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tap"
version = "0.1.0"
description = "Traffic Simulator"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Antonios Mavrotas", email = "antoniosmavrotas@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "jax>=0.10.1",
    "jaxtyping>=0.3.10",
    "numpy>=2.0",
]

[project.urls]
Homepage = "https://github.com/Antonios-M/tap"
Repository = "https://github.com/Antonios-M/tap"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9",
  "ty>=0.0.1a8",
  "bandit[toml]>=1.8",
  "pre-commit>=4.0",
  "python-semantic-release==10.5.3",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "UP",       # pyupgrade
  "SIM",      # flake8-simplify
  "TCH",      # flake8-type-checking
  "RUF",      # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# jaxtyping shape strings (e.g. Float[Array, "2 E"], "E", "") are parsed by ruff as
# forward references and flagged F722/F821, but they are not Python names/syntax.
# `ty` still type-checks these modules for genuinely undefined names.
"tap/**/*.py" = ["F722", "F821"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# ty — type checking
# ---------------------------------------------------------------------------
[tool.ty]
# ty reads src layout automatically; add overrides here if needed

# ---------------------------------------------------------------------------
# Bandit — security
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = []

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tap --cov-report=term-missing --cov-fail-under=80"

# ---------------------------------------------------------------------------
# python-semantic-release
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
commit_message = "chore(release): v{version}"
# Stay in the 0.x development series: allow 0.x versions (otherwise the first
# release is forced to 1.0.0), and don't auto-promote 0.x -> 1.0.0 on a breaking
# change. Cut 1.0.0 deliberately (e.g. `semantic-release version --major`).
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.branches.main]
match = "^main$"

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"
# Keep the changelog to user-facing changes; drop tooling/admin commits.
exclude_commit_patterns = [
  "^chore",
  "^ci",
  "^test",
  "^style",
  "^build",
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
# List the actual commits in the first release instead of just "Initial Release".
mask_initial_release = false

[tool.semantic_release.commit_parser_options]
# conventional commits: feat -> minor, fix -> patch, BREAKING -> major
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "ci", "test", "style"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
